--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Translator</string>
+    <string name="no_account">Not have account? <b>Signup</b></string>
 </resources>
